intentando que funcione peticion de todos los usuarios

--- a/src/main/resources/templates/editEvent.html
+++ b/src/main/resources/templates/editEvent.html
@@ -34,7 +34,7 @@
           {{/event.image}}
 
   <label>Upload image: </label><br>
-  <input type='file' name='imageField' accept=".jpg, .jpeg" />
+  <input type='file' name='imageFile' accept=".jpg, .jpeg" />
   <input type="hidden" name="_csrf" value="{{token}}"/>
   <br>
   <br>
