--- a/src/main/resources/templates/NewEvent.html
+++ b/src/main/resources/templates/NewEvent.html
@@ -17,7 +17,7 @@
                         <h3 class="login-heading mb-4">Nuevo Evento</h3>
         
                         <!-- Sign In Form -->
-                        <form action="/NewEvent" method="post">
+                        <form action="/NewEvent" method="post" enctype="multipart/form-data">
                             <div class="form-floating mb-3">
                                 <p>Evento:</p>
                                 <input type="text" class="form-control" name="title" placeholder="Evento"/>
