--- a/src/main/resources/templates/showEvent.html
+++ b/src/main/resources/templates/showEvent.html
@@ -28,12 +28,15 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 {{#event.image}}
-                <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="/events/{{event.id}}/image"></div>
+                <div class="col-md-6">
+                    <img class="card-img-top mb-5 mb-md-0" src="/events/{{event.id}}/image" alt="{{event.title}}">
+                </div>
                 {{/event.image}}
 
                 {{^event.image}}
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="/images/no_image.png"></div>
+                <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="/images/no_image.png" alt="No Image"></div>
                 {{/event.image}}
+
                 <div class="col-md-6">
                     <h1 class="display-5 fw-bolder">{{event.title}}</h1>
                     <div class="fs-5 mb-5">
