--- a/src/main/resources/templates/editEvent.html
+++ b/src/main/resources/templates/editEvent.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="/editEvent" method="post">
+<form action="/editEvent" method="post" enctype="multipart/form-data">
   <label for="floatingTitle">Evento:</label>
   <input type="text" id="floatingTitle" name="title" value="{{event.title}}" required>
 
@@ -20,26 +20,19 @@
   <label for="floatingPlace">Lugar</label>
   <input type="text" class="form-control" id="floatingPlace" name="place" value="{{event.place}}" required>
 
-  <label for="floatingDescription">Lugar</label>
+  <label for="floatingDescription">Descripcion</label>
   <input type="text" class="form-control" id="floatingDescription" name="description" value="{{event.description}}" required>
-  <p>Image: </p>
 
-  {{#event.image}}
-  <img src="/events/{{event.id}}/image">
-  <br><input type='checkbox' name='removeImage'> <label>Remove image</label><br>
-        {{/event.image}}
+  <label>Subir nueva imagen:</label><br>
+  <input type='file' name='imageField' accept=".jpg, .jpeg" /><br>
 
-        {{^event.image}}
-        <img src="/images/no_image.png"><br>
-          {{/event.image}}
+  <input type='checkbox' name='removeImage'>
+  <label>Eliminar imagen actual</label><br>
 
-  <label>Upload image: </label><br>
-  <input type='file' name='imageFile' accept=".jpg, .jpeg" />
   <input type="hidden" name="_csrf" value="{{token}}"/>
-  <br>
-  <br>
   <input type="hidden" name="id" value="{{event.id}}" />
   <button type="submit">Guardar cambios</button>
 </form>
+
 </body>
 </html>
