Generamos los gráficos del administardor

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -138,7 +138,7 @@
         <div class="row">
 
 
-          <div class="col-xl-5 col-sm-5 mb-xl-2 mb-5">
+          <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
             <div class="card">
               <div class="card-header p-4 pt-5">
                 <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
@@ -155,7 +155,7 @@
           <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
             <div class="card">
               <div class="card-header p-4 pt-5">
-                <div class="icon icon-lg icon-shape bg-gradient-success shadow-success text-center border-radius-xl mt-n4 position-absolute">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
                   <i class="material-icons opacity-10">person</i>
                 </div>
                 <div class="text-end pt-1">
@@ -165,147 +165,83 @@
               </div>
             </div>
           </div>
+          <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
+            <div class="card">
+              <div class="card-header p-4 pt-5">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Eventos de Tecnologia</p>
+                  <h4 class="mb-0">{{countTecnologia}}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
+            <div class="card">
+              <div class="card-header p-4 pt-5">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Eventos de Arte</p>
+                  <h4 class="mb-0">{{countArtes}}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <!--</div>
-        <div class="row mt-7">
+          <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
+            <div class="card">
+              <div class="card-header p-4 pt-5">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Eventos Sanitarios</p>
+                  <h4 class="mb-0">{{countSanitario}}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-6 col-sm-6 mb-xl-2 mb-6">
+            <div class="card">
+              <div class="card-header p-4 pt-5">
+                <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
+                  <i class="material-icons opacity-10">person</i>
+                </div>
+                <div class="text-end pt-1">
+                  <p class="text-sm mb-0 text-capitalize">Eventos de Humanidades</p>
+                  <h4 class="mb-0">{{countHumanidades}}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-6 col-md-8 mt-4 mb-6">
-            <div class="card z-index-2 ">
+            <div class="card z-index-2">
               <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
                 <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                   <div class="chart">
-                    <canvas id="chart-bars" class="chart-canvas" height="170"></canvas>
+                    <canvas id="chart-pie" class="chart-canvas" height="170"></canvas>
                   </div>
                 </div>
               </div>
               <div class="card-body">
-                <h6 class="mb-0 ">Total de eventos</h6>
-                <p class="text-sm ">Numero total de eventos por mes</p>
+                <h6 class="mb-0">Eventos por Categoría</h6>
+                <p class="text-sm">Proporción de eventos por categoría</p>
                 <hr class="dark horizontal">
-                <div class="d-flex ">
+                <div class="d-flex">
                   <i class="material-icons text-sm my-auto me-1">schedule</i>
-                  <p class="mb-0 text-sm"> actualizado hace 2 dias </p>
+                  <p class="mb-0 text-sm">Actualizado hace 2 días</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-8 mt-4 mb-6">
-            <div class="card z-index-2  ">
-              <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-                <div class="bg-gradient-success shadow-success border-radius-lg py-3 pe-1">
-                  <div class="chart">
-                    <canvas id="chart-line" class="chart-canvas" height="170"></canvas>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <h6 class="mb-0 "> Inscripciones en eventos</h6>
-                <p class="text-sm "> Inscripciones en eventos en los ultimos 5 meses </p>
-                <hr class="dark horizontal">
-                <div class="d-flex ">
-                  <i class="material-icons text-sm my-auto me-1">schedule</i>
-                  <p class="mb-0 text-sm"> actualizado hace 10 min </p>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-
-
-
-      <div class="row mb-4">
-        <div class="col-lg-12 col-md-12 mb-md-0 mb-12">
-          <div class="card">
-            <div class="card-body px-0 pb-2">
-              <div class="table-responsive">
-                <table class="table align-items-center mb-0">
-                  <thead>
-                    <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Evento</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Members</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="assets/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                          -->
-                            <h6 class="mb-0 text-sm">Taller en Material XD Version</h6>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="avatar-group mt-2">
-                         <span>Gestionado por URJC Events</span>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm">Taller en Material XD Version</h6>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="avatar-group mt-2">
-                          <span>Gestionado por URJC Events</span>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm">Taller en Material XD Version</h6>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="avatar-group mt-2">
-                          <span>Gestionado por URJC Events</span>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm">Taller en Material XD Version</h6>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="avatar-group mt-2">
-                          <span>Gestionado por URJC Events</span>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
 
         </div>
       </div>
@@ -320,251 +256,48 @@
   <script src="/js/plugins/smooth-scrollbar.min.js"></script>
   <script src="/js/plugins/chartjs.min.js"></script>
   <script>
-    var ctx = document.getElementById("chart-bars").getContext("2d");
+    document.addEventListener('DOMContentLoaded', () => {
+      // Obtener los valores de countTecnologia, countArtes, countSanitario y countHumanidades
+      const countTecnologia = {{countTecnologia}};
+      const countArtes = {{countArtes}};
+      const countSanitario = {{countSanitario}};
+      const countHumanidades = {{countHumanidades}};
 
-    new Chart(ctx, {
-      type: "bar",
-      data: {
-        labels: ["M", "T", "W", "T", "F", "S", "S"],
-        datasets: [{
-          label: "Sales",
-          tension: 0.4,
-          borderWidth: 0,
-          borderRadius: 4,
-          borderSkipped: false,
-          backgroundColor: "rgba(255, 255, 255, .8)",
-          data: [50, 20, 10, 22, 50, 10, 40],
-          maxBarThickness: 6
-        }, ],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
+      // Calcular los datos para el gráfico de quesitos
+      const labels = ['Tecnología', 'Artes', 'Sanitario', 'Humanidades'];
+      const data = [countTecnologia, countArtes, countSanitario, countHumanidades];
+
+      // Inicializar el gráfico de quesitos
+      const ctxPie = document.getElementById("chart-pie").getContext("2d");
+      new Chart(ctxPie, {
+        type: "pie",
+        data: {
+          labels: labels,
+          datasets: [{
+            label: "Eventos por Categoría",
+            data: data,
+            backgroundColor: [
+              'rgb(204,165,165)',
+              'rgb(91,57,57)',
+              'rgb(145,49,49)',
+              'rgb(73,9,9)'
+            ],
+            borderColor: [
+              'rgb(204,165,165)',
+              'rgb(91,57,57)',
+              'rgb(145,49,49)',
+              'rgb(73,9,9)'
+            ],
+            borderWidth: 1
+          }]
         },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5],
-              color: 'rgba(255, 255, 255, .2)'
-            },
-            ticks: {
-              suggestedMin: 0,
-              suggestedMax: 500,
-              beginAtZero: true,
-              padding: 10,
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-              color: "#fff"
-            },
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5],
-              color: 'rgba(255, 255, 255, .2)'
-            },
-            ticks: {
-              display: true,
-              color: '#f8f9fa',
-              padding: 10,
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-        },
-      },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false
+        }
+      });
     });
 
-
-    var ctx2 = document.getElementById("chart-line").getContext("2d");
-
-    new Chart(ctx2, {
-      type: "line",
-      data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-        datasets: [{
-          label: "Mobile apps",
-          tension: 0,
-          borderWidth: 0,
-          pointRadius: 5,
-          pointBackgroundColor: "rgba(255, 255, 255, .8)",
-          pointBorderColor: "transparent",
-          borderColor: "rgba(255, 255, 255, .8)",
-          borderColor: "rgba(255, 255, 255, .8)",
-          borderWidth: 4,
-          backgroundColor: "transparent",
-          fill: true,
-          data: [50, 40, 300, 320, 500, 350, 200, 230, 500],
-          maxBarThickness: 6
-
-        }],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
-        },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5],
-              color: 'rgba(255, 255, 255, .2)'
-            },
-            ticks: {
-              display: true,
-              color: '#f8f9fa',
-              padding: 10,
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              color: '#f8f9fa',
-              padding: 10,
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-        },
-      },
-    });
-
-    var ctx3 = document.getElementById("chart-line-tasks").getContext("2d");
-
-    new Chart(ctx3, {
-      type: "line",
-      data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-        datasets: [{
-          label: "Mobile apps",
-          tension: 0,
-          borderWidth: 0,
-          pointRadius: 5,
-          pointBackgroundColor: "rgba(255, 255, 255, .8)",
-          pointBorderColor: "transparent",
-          borderColor: "rgba(255, 255, 255, .8)",
-          borderWidth: 4,
-          backgroundColor: "transparent",
-          fill: true,
-          data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
-          maxBarThickness: 6
-
-        }],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
-        },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5],
-              color: 'rgba(255, 255, 255, .2)'
-            },
-            ticks: {
-              display: true,
-              padding: 10,
-              color: '#f8f9fa',
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              color: '#f8f9fa',
-              padding: 10,
-              font: {
-                size: 14,
-                weight: 300,
-                family: "Roboto",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-        },
-      },
-    });
   </script>
   <script>
     var win = navigator.platform.indexOf('Win') > -1;
