--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -145,7 +145,7 @@
                   <i class="material-icons opacity-10">person</i>
                 </div>
                 <div class="text-end pt-1">
-                  <p class="text-sm mb-0 text-center">Total de usuarios</p>
+                  <p class="text-sm mb-0 text-text-capitalize">Total de usuarios</p>
                   <h4 class="mb-0">{{countUsers}}</h4>
                 </div>
               </div>
