--- a/frontend/webapp14_2/src/styles.css
+++ b/frontend/webapp14_2/src/styles.css
@@ -10950,7 +10950,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  /*background-image: url("../src/assets/img/header-bg.jpg");*/
+  background-image: url("./assets/img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11277,7 +11277,7 @@ header.masthead .masthead-heading {
 
 section#contact {
   background-color: #212529;
-  /*background-image: url("../src/assets/img/map-image.png");*/
+  background-image: url("./assets/img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -11351,7 +11351,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .bg-image {
-  /*background-image: url('../src/assets/img/fondoURJC.jpg');*/
+  background-image: url('./assets/img/fondoURJC.jpg');
   background-size: cover;
   background-position: center;
 }
