Arreglado commnets.service, prueba review.component

--- a/frontend/webapp14_2/src/app/templates/review/review.component.html
+++ b/frontend/webapp14_2/src/app/templates/review/review.component.html
@@ -1,1 +1,23 @@
-<p>review works!</p>
+<div *ngIf="pageData.userComments.length > 0">
+  <table class="table align-items-center justify-content-center mb-0">
+    <thead>
+    <tr>
+      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nickname</th>
+      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Descripcion</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let comment of pageData.userComments">
+      <td>
+        <div class="d-flex flex-column justify-content-center">
+          <h6 class="mb-0 text-sm">{{ comment.nick }}</h6>
+        </div>
+      </td>
+      <td>
+        <h6 class="d-flex flex-column justify-content-center">{{ comment.description }}</h6>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
