--- a/frontend/webapp14_2/src/app/templates/review/review.component.html
+++ b/frontend/webapp14_2/src/app/templates/review/review.component.html
@@ -1,23 +1,33 @@
-<div *ngIf="pageData.userComments.length > 0">
-  <table class="table align-items-center justify-content-center mb-0">
-    <thead>
-    <tr>
-      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nickname</th>
-      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Descripcion</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let comment of pageData.userComments">
-      <td>
-        <div class="d-flex flex-column justify-content-center">
-          <h6 class="mb-0 text-sm">{{ comment.nick }}</h6>
+<div class="container-fluid row py-4">
+  <div class="col-12">
+    <div class="card my-4">
+      <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+        <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+          <h6 class="text-white text-capitalize ps-3">Tabla de comentarios</h6>
         </div>
-      </td>
-      <td>
-        <h6 class="d-flex flex-column justify-content-center">{{ comment.description }}</h6>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+      </div>
+      <div class="card-body px-0 pb-2">
+        <div class="table-responsive p-0">
+          <table class="table align-items-center justify-content-center mb-0">
+            <thead>
+            <tr>
+              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nickname</th>
+              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Descripcion</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let comment of userComments">
+              <td>
+                  <h6 class="d-flex flex-column justify-content-center">{{ comment.nick }}</h6>
+              </td>
+              <td>
+                <h6 class="d-flex flex-column justify-content-center">{{ comment.description }}</h6>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
