conseguido mostrar tabla de comentarios de perfil

--- a/frontend/webapp14_2/src/app/templates/review/review.component.html
+++ b/frontend/webapp14_2/src/app/templates/review/review.component.html
@@ -18,10 +18,10 @@
             <tbody>
             <tr *ngFor="let comment of userComments">
               <td>
-                  <h6 class="d-flex flex-column justify-content-center">{{ comment.nick }}</h6>
+                  <h6 class="d-flex flex-column justify-content-center">{{comment.NICK}}</h6>
               </td>
               <td>
-                <h6 class="d-flex flex-column justify-content-center">{{ comment.description }}</h6>
+                <h6 class="d-flex flex-column justify-content-center">{{comment.description}}</h6>
               </td>
             </tr>
             </tbody>
