Configuramos el logeo

--- a/frontend/webapp14_2/src/app/page/page.component.html
+++ b/frontend/webapp14_2/src/app/page/page.component.html
@@ -15,7 +15,7 @@
 
       </ul>
     </div>
-    <a class="btn btn-primary btn-xl text-uppercase" href="login">Log-In</a>
+    <a class="btn btn-primary btn-xl text-uppercase" (click)="goToLogin()">Log-In</a>
   </div>
 </nav>
 <!-- Masthead-->
