Conseguimos realizar el registro

--- a/frontend/webapp14_2/src/app/templates/login/login.component.html
+++ b/frontend/webapp14_2/src/app/templates/login/login.component.html
@@ -23,7 +23,7 @@
               <div>
                 <h3>    </h3>
                 <h3 class="login-heading mb-4">Create una cuenta!</h3>
-                <a class="btn btn-primary btn-xl text-uppercase" href="register">Registrarme</a>
+                <a class="btn btn-primary btn-xl text-uppercase" (click)="goToRegister()">Registrarme</a>
               </div>
 
             </div>
