agregado showevent.html y showevent.component.ts

--- a/frontend/webapp14_2/src/app/page/page.component.html
+++ b/frontend/webapp14_2/src/app/page/page.component.html
@@ -45,7 +45,7 @@
             <div class="portfolio-caption">
               <div class="portfolio-caption-heading">{{event.title}}</div>
               <div class="portfolio-caption-subheading text-muted">{{event.description}}</div>
-              <a class="btn btn-primary btn-xl text-uppercase" >Más información</a>
+              <a class="btn btn-primary btn-xl text-uppercase" [routerLink]="['/event', event.id]">Más información</a>
             </div>
           </div>
         </div>
