--- a/frontend/webapp14_2/src/app/templates/show-event/show-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/show-event/show-event.component.html
@@ -1,1 +1,90 @@
-<p>show-event works!</p>
+<div class="container px-4 px-lg-5 my-5">
+  <div class="row gx-4 gx-lg-5 align-items-center">
+    <div class="col-md-6">
+      <img class="card-img-top mb-5 mb-md-0" [src]="event?.image ? '/events/' + event.id + '/image' : '/images/no_image.png'" [alt]="event?.title ? event.title : 'No Image'">
+    </div>
+    <div class="col-md-6">
+      <h1 class="display-5 fw-bolder">{{ event?.title }}</h1>
+      <div class="fs-5 mb-5">
+        <span>{{ event?.category }}</span>
+      </div>
+      <ul class="list-inline">
+        <li><strong>Fecha:</strong> {{ event?.date }}</li>
+        <li><strong>Lugar:</strong> {{ event?.place }}</li>
+        <li><strong>Duración:</strong> {{ event?.duration }}</li>
+      </ul>
+      <p class="lead">{{ event?.description }}</p>
+      <div class="d-flex">
+        <a class="btn btn-primary btn-xl text-uppercase me-2" routerLink="/">
+          Volver
+        </a>
+        <ng-container *ngIf="user">
+          <input type="hidden" name="id" [value]="user.id">
+          <a class="btn btn-primary btn-xl text-uppercase me-2" [routerLink]="['/inscription']" [queryParams]="{ id: event?.id }">
+            <i class="fas fa-edit me-1"></i>
+            Inscribirme
+          </a>
+          <button class="btn btn-primary btn-xl text-uppercase me-2" (click)="toggleCommentSection()">
+            <input type="hidden" name="_csrf" [value]="token"/>
+            <i class="fas fa-edit me-1"></i>
+            Agregar comentario
+          </button>
+        </ng-container>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid row py-4" *ngIf="user">
+  <div class="col-12">
+    <div class="card my-4">
+      <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+        <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+          <h6 class="text-white text-capitalize ps-3">Comentarios del Evento</h6>
+        </div>
+      </div>
+      <div class="card-body px-0 pb-2">
+        <div class="table-responsive p-0">
+          <table class="table align-items-center justify-content-center mb-0">
+            <thead>
+            <tr>
+              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nickname</th>
+              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Descripcion</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let comment of eventComments">
+              <td>
+                <div class="d-flex flex-column justify-content-center">
+                  <h6 class="mb-0 text-sm">{{ comment.nick }}</h6>
+                </div>
+              </td>
+              <td>
+                <h6 class="d-flex flex-column justify-content-center">{{ comment.description }}</h6>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<form [action]="'/CreateReview'" method="post" class="hidden" id="commentSection" *ngIf="user">
+  <input type="hidden" name="id" [value]="event?.id">
+  <div class="col-md-9 col-lg-8 mx-auto">
+    <h3 class="login-heading mb-4">Bienvenido! A la seccion de opiniones</h3>
+    <h4 class="login-heading mb-4">Añada tu opinión</h4>
+    <div class="form-floating mb-3">
+      <textarea class="form-control" id="floatingPhone" placeholder="Deja tu comentario" name="description"></textarea>
+      <label for="floatingPhone">Deja tu comentario</label>
+    </div>
+    <div class="d-grid">
+      <input type="hidden" name="_csrf" [value]="token"/>
+      <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Guardar" [href]="'/CreateReview?id=' + event?.id"/>
+    </div>
+  </div>
+</form>
+
+
