Progreso con los estilos de dashboard

--- a/frontend/webapp14_2/src/app/page/page.component.html
+++ b/frontend/webapp14_2/src/app/page/page.component.html
@@ -7,7 +7,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-        <li class="nav-item"><a class="nav-link" href="events" *ngIf="isAdmin">Gestion Ticket Event</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToDashboard()" *ngIf="isAdmin">Gestion Ticket Event</a></li>
         <li class="nav-item"><a class="nav-link" href="#eventosDestacados">Destacados</a></li>
         <li class="nav-item"><a class="nav-link" href="#eventosRecientes">Recientes</a></li>
         <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
