--- a/frontend/webapp14_2/src/app/templates/dashboard/dashboard.component.html
+++ b/frontend/webapp14_2/src/app/templates/dashboard/dashboard.component.html
@@ -1,1 +1,113 @@
-<p>dashboard works!</p>
+<div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-2 fixed-start ms-2 bg-gradient-dark" id="sidenav-main">
+  <div class="sidenav-header">
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+    <a class="navbar-brand m-0" href="/" target="_blank">
+      <span class="ms-1 font-weight-bold text-white">Volver a TicketEvent</span>
+    </a>
+  </div>
+  <hr class="horizontal light mt-0 mb-2">
+  <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-white" href="dashboard">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Panel de Administracion</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="userPermissions">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Permisos Edicion</span>
+        </a>
+      </li>
+      <li class="nav-item mt-3">
+        <h5 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Gestion de cuentas</h5>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/events">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Gestión de Eventos</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="profile">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Mi Perfil</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="review">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Reviews</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
+  <!-- Navbar -->
+  <div class="container-fluid py-4">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+          <div class="card">
+            <div class="card-header p-4 pt-5">
+              <div class="text-end pt-1">
+                <p class="text-sm mb-0 text-text-capitalize">Total de usuarios</p>
+                <h4 class="mb-0">Users</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+          <div class="card">
+            <div class="card-header p-4 pt-5">
+              <div class="text-end pt-1">
+                <p class="text-sm mb-0 text-text-capitalize">Total de eventos</p>
+                <h4 class="mb-0">Eventos</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12 col-md-8 mt-4 mb-6">
+              <div class="card z-index-2">
+                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
+                  <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+                    <div class="chart">
+                      <canvas id="chart-pie" class="chart-canvas" height="170"></canvas>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <h6 class="mb-0">Eventos por Categoría</h6>
+                  <p class="text-sm">Proporción de eventos por categoría</p>
+                  <hr class="dark horizontal">
+                  <div class="d-flex">
+                    <i class="material-icons text-sm my-auto me-1">schedule</i>
+                    <p class="mb-0 text-sm">Actualizado hace 2 días</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Aquí irían las otras tarjetas similares -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
