--- a/frontend/webapp14_2/src/app/templates/profile/profile.component.html
+++ b/frontend/webapp14_2/src/app/templates/profile/profile.component.html
@@ -1,1 +1,95 @@
-<p>profile works!</p>
+
+
+<div class="main-content position-relative max-height-vh-100 h-100">
+
+  <div class="container-fluid px-2 px-md-4">
+    <div class="page-header min-height-300 border-radius-xl mt-4"
+         style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+      <span class="mask bg-gradient-primary opacity-6"></span>
+    </div>
+    <div class="card-body">
+      <div *ngIf="user">
+      <div class="row gx-4 mb-2">
+        <div class="col-auto">
+        </div>
+        <div class="col-auto my-auto">
+          <div class="h-100">
+            <h5 class="mb-1">
+              {{user.name}} {{user.surname}}
+            </h5>
+            <p>
+              {{user.roles}}
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row">
+          <div class="col-12 col-xl-12">
+            <div class="card card-plain h-100">
+              <div class="card-header pb-0 p-3">
+                <div class="row">
+                  <div class="col-md-8 d-flex align-items-center">
+                    <h6 class="mb-0">Información del perfil</h6>
+                  </div>
+                  <div class="col-md-4 text-end">
+                    <a href="/editForm">
+                      <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top"
+                         title="Editar perfil"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body p-3">
+                <p class="text-sm">
+                </p>
+                <hr class="horizontal gray-light my-4">
+                <ul class="list-group">
+                  <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Nombre completo:</strong>
+                    &nbsp; {{user.name}} {{user.surname}}</li>
+                  <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Correo electrónico:</strong>
+                    &nbsp; {{user.email}}</li>
+                  <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Teléfono:</strong> &nbsp;
+                    {{user.phone}}</li>
+                  <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Centro de estudio:</strong>
+                    &nbsp; {{user.studyCenter}}</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-12 col-xl-12">
+            <div class="card card-plain h-100">
+              <div class="card-header pb-0 p-3">
+                <div class="row">
+                  <div class="col-md-8 d-flex align-items-center">
+                    <h6 class="mb-0">Eventos en los que estás apuntado</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body p-3">
+                <ul class="list-group">
+                  <ng-container *ngIf="userEvents.length > 0; else noEvents">
+                    <li *ngFor="let event of userEvents" class="list-group-item border-0 ps-0 pt-0 text-sm">
+                      <strong class="text-dark">Título:</strong> &nbsp; {{ event.title }}
+                    </li>
+                  </ng-container>
+                  <ng-template #noEvents>
+                    <li class="list-group-item border-0 ps-0 pt-0 text-sm">No estás inscrito a ningún evento.</li>
+                  </ng-template>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
